# langchain-interface

./: .gitignore  README.md  pyproject.toml
langchain_interface/example_selectors/: __init__.py  bm25_example_selector.py  constant_example_selector.py  example_selector.py  static_and_dynamic_selector.py
langchain_interface/instances/: __init__.py  instance.py
langchain_interface/interfaces/: __init__.py  chat_interface.py  completion_interface.py  decomposition_interface.py  interface.py
langchain_interface/interfaces/bird/: __init__.py  prob_inference_interface.py
langchain_interface/interfaces/self_refine/: __init__.py  general_claim_revision_interface.py
langchain_interface/models/: __init__.py
langchain_interface/models/chat_models/: __init__.py  (+2 more)
langchain_interface/states/: __init__.py  base_states.py
langchain_interface/steps/: __init__.py  _answer_shortening_step.py  _explain_diff_step.py  _test_out_on_quiz_step.py  anchored_clustering_step.py  answer_shortening_step.py  claim_set_split_step.py  contrastively_summarize_step.py  decomposition_step.py  decontextualization_step.py  distinct_cluster_identification.py  evidential_support_step.py  explain_diff_step.py  general_claim_feedback_step.py  probability_estimate_step.py  probability_prediction_step.py  quiz_question_step.py  step.py  test_out_on_quiz_step.py  vague_answer_step.py
tests/: test_batch_api_calling.py  test_bird_prob_inference.py  test_instance_class_serialization.py  test_langchain_api_call.py  test_reasoning_parsing.py  test_sample_self_refine.py  test_steps.py
(+11 files in other folders)
