[build-system]
requires = [
    "setuptools>=54",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-interface"
version = "0.1.11"
dependencies = [
    "langchain",
    "langgraph",
    "overrides",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "rank_bm25",
    "registrable@git+ssh://git@github.com/zipJiang/registrable.git"
]
