[build-system]
requires = [
    "setuptools>=54",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-interface"
version = "0.1.12"
dependencies = [
    "langchain",
    "overrides",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "rank_bm25",
    "registrable@git+ssh://git@github.com/zipJiang/registrable.git"
]
